force-app/main/default/objects/Booking_Payment_Schedule__c/Booking_Payment_Schedule__c.object-meta.xml
<CustomObject>
    <label>Booking Payment Schedule</label>
    <nameField>
        <displayFormat>BPS-{00000}</displayFormat>
        <label>Payment Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Payment Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>