force-app/main/default/objects/Booking_Payment_Schedule__c/fields/Actual_Demand__c.field-meta.xml
<CustomField>
    <fullName>Actual_Demand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actual Demand</label>
    <referenceTo>Demand__c</referenceTo>
    <relationshipLabel>Payment Schedule Entries</relationshipLabel>
    <relationshipName>Payment_Schedule_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>