force-app/main/default/objects/Booking_Payment_Schedule__c/fields/Demand_Raised_Date__c.field-meta.xml
<CustomField>
    <fullName>Demand_Raised_Date__c</fullName>
    <label>Demand Raised Date</label>
    <type>Date</type>
</CustomField>