force-app/main/default/objects/Booking_Payment_Schedule__c/fields/Milestone_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Trigger__c</fullName>
    <label>Milestone Trigger</label>
    <length>120</length>
    <type>Text</type>
</CustomField>