force-app/main/default/objects/Booking_Payment_Schedule__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Demand Raised</fullName><default>false</default><label>Demand Raised</label></value>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
            <value><fullName>Overdue</fullName><default>false</default><label>Overdue</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>